// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`usersReducer test suite add user test suite should add another user 1`] = `
Object {
  "1": Object {
    "active": false,
    "displayName": "jimi",
    "id": "1",
  },
  "active": false,
  "displayName": "leah",
  "id": "2",
}
`;

exports[`usersReducer test suite add user test suite should add first user 1`] = `
Object {
  "active": false,
  "displayName": "jimi zax",
  "id": "1",
}
`;

exports[`usersReducer test suite defaults should return default state 1`] = `Object {}`;

exports[`usersReducer test suite set user active test suite should activate user 1`] = `
Object {
  "1": Object {
    "active": true,
    "displayName": "jimi",
    "id": "1",
  },
  "2": Object {
    "active": false,
    "displayName": "leah",
    "id": "2",
  },
}
`;

exports[`usersReducer test suite set user active test suite should deactivate user 1`] = `
Object {
  "1": Object {
    "active": false,
    "displayName": "jimi",
    "id": "1",
  },
  "2": Object {
    "active": false,
    "displayName": "leah",
    "id": "2",
  },
}
`;
